some changes in css margin

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             <h1 class="hero1text3">O único guia que te ensina passo a passo de como alcançar<br>o sucesso pessoal de forma definitiva.</h1>
             <button class="hero1button"><a href="index2.html">QUERO GARANTIR O MEU</a></button>
         </div>
+        <div class="hero2">
+            <h1>oi</h1>
+        </div>
     </main>
 </body>
 </html>
